%% Federal Grant Disruption Database — ER diagram (6 tables)
%% EPPS 6354 — Emily Stern — Spring 2026
%%
%% Research question:
%%   How much federal grant funding has been disrupted since the 2025
%%   administration change — either rescinded or terminated — and which
%%   agencies and recipients are most affected?
%%
%% Render: paste into https://mermaid.live, or open er_diagram.html

erDiagram
    agencies      ||--o{ agencies            : "parent_of (self-FK)"
    agencies      ||--o{ opportunities       : "posts"
    agencies      ||--o{ awards              : "awards (×2 roles)"
    agencies      ||--o{ terminations        : "source"

    recipients    ||--o{ awards              : "receives"
    recipients    ||--o{ recipients          : "parent_of (self-FK)"

    opportunities ||--o{ change_log          : "tracks (Type-2 SCD)"
    opportunities ||--o{ awards              : "may_be_awarded_via"

    awards        ||--o{ terminations        : "may_be_terminated_via_FAIN"

    agencies {
      int agency_id PK
      varchar agency_code UK
      varchar agency_name
      varchar agency_level "agency | sub_agency | office"
      int parent_agency_id FK "self-reference"
    }

    recipients {
      varchar recipient_uei PK
      varchar recipient_name
      varchar recipient_parent_uei FK "self-reference"
      varchar state_code
      varchar city_name
      varchar congressional_district
    }

    opportunities {
      varchar opportunity_id PK
      varchar opportunity_number
      varchar title
      int agency_id FK
      varchar cfda_number
      varchar cfda_title
      varchar opportunity_status
      date post_date
      date close_date
      date archive_date
      double estimated_total_funding
      double award_ceiling
      boolean is_active
    }

    awards {
      varchar assistance_award_unique_key PK
      varchar award_id_fain UK
      varchar recipient_uei FK
      int awarding_agency_id FK
      int funding_agency_id FK
      varchar opportunity_id FK
      varchar cfda_number
      date award_date
      date period_of_perf_start
      date period_of_perf_end
      double total_obligated_amount
      double total_outlayed_amount
      varchar pop_state_code
    }

    terminations {
      int termination_id PK
      int source_agency_id FK
      varchar grant_id
      varchar award_id_fain FK
      varchar current_status
      boolean has_been_terminated
      boolean has_been_reinstated
      date first_termination_date
      date latest_termination_date
      date latest_reinstatement_date
      double award_value
      double post_termination_deobligation
      varchar notes
    }

    change_log {
      int change_id PK
      varchar opportunity_id FK
      timestamptz snapshot_date
      varchar change_type "ADDED | REMOVED | MODIFIED"
      varchar field_changed
      varchar old_value
      varchar new_value
      timestamptz detected_at
    }
